# small_utils

./: Cargo.toml  README.md
.github/workflows/: rust.yml
commons/: Cargo.toml
commons/src/: error.rs  lib.rs
commons/src/file/: errors.rs  functions.rs  mod.rs  model.rs  traits.rs
denest/: Cargo.toml
denest/src/: cli.rs  logic.rs  main.rs
fmove/: Cargo.toml
ranf/: Cargo.toml
ranf/src/: main.rs
rempref/: Cargo.toml
rempref/src/: cli.rs  error.rs  logic.rs  main.rs  task.rs
tempestas/: Cargo.toml
tempestas/src/: cli.rs  location.rs  main.rs  model.rs
