[package]
name = "tempestas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
chrono = { version = "0.4.21", features = ["serde"] }
